--- a/src/index.html
+++ b/src/index.html
@@ -33,13 +33,11 @@
 <!-----------------------------BOOTSTRAP------------------------------------------------->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> 
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-  
-  <!--<script src="js/jquery-3.3.1.min.js" charset="utf-8"></script> -->
+ <!--<script src="js/jquery-3.3.1.min.js" charset="utf-8"></script> -->
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> 
-
   
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
@@ -52,6 +50,14 @@
   <!-- Font awesome -->
   <script defer src="https://use.fontawesome.com/releases/v5.2.0/js/all.js" integrity="sha384-4oV5EgaV02iISL2ban6c/RmotsABqE4yZxZLcYMAdG7FAPsyHYAPpywE9PJo+Khy" crossorigin="anonymous"></script>
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.5.0/js/bootstrap-datepicker.min.js"></script>
+
+<script>
+    $( document ).ready(function() {
+        $('#fecha').datepicker();
+    });
+
+</script>
 </head>
 <body>
 
@@ -70,20 +76,5 @@
   <script src="https://unpkg.com/leaflet@1.2.0/dist/leaflet.js"
    integrity="sha512-lInM/apFSqyy1o6s89K4iQUKg6ppXEgsVxT35HbzUupEVRh2Eu9Wdl4tHj7dZO0s1uvplcYGmt3498TtHq+log=="
    crossorigin=""></script>
-   
-   <script>
-      $( document ).ready(function() {
-          $('#fecha').datepicker();
-          $('#fecha0').datepicker();
-          $('#fecha1').datepicker();
-          $('#fecha2').datepicker();
-          $('#fecha3').datepicker();
-          $('#fecha4').datepicker();
-          $('#fecha5').datepicker();
-          $('#fecha6').datepicker();
-          $('#fecha7').datepicker();
-      });
-  
-  </script>
 </body>
 </html>
